[gd_scene load_steps=2 format=3 uid="uid://cnoywsgo1shq"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_jcx2s"]

[node name="Player" type="RigidBody2D" groups=["ships"]]
mass = 1000.0
inertia = 1.0
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_jcx2s")

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(25, 25, 0, -50, -25, 25)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(25, 25, 0, -50, -25, 25)

[node name="Thruster" type="Marker2D" parent="."]

[node name="TorpedoLauncherLeft" type="Marker2D" parent="."]
position = Vector2(-25, -30)

[node name="LauncherCooldownLeft" type="Timer" parent="."]
one_shot = true

[node name="TorpedoLauncherRight" type="Marker2D" parent="."]
position = Vector2(25, -30)

[node name="LauncherCooldownRight" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LauncherCooldownLeft" to="." method="_on_launcher_cooldown_left_timeout"]
[connection signal="timeout" from="LauncherCooldownRight" to="." method="_on_launcher_cooldown_right_timeout"]
